ncc/testsuite/positive/Issue-git-0543.n
using System.Console;

public interface A
{
  public class B
  {
    public F() : void
    {
      WriteLine("A.B.F");
    }
  }
}

A.B().F();

/*
BEGIN-OUTPUT
A.B.F
END-OUTPUT
*/
