ncc/testsuite/negative/main.n
using System.Console;
namespace A {
       module B {
               public Main() : void {
                       WriteLine("Main method");
               }
       }
}
WriteLine("Another one"); // more than one entry point

